--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <button id="btn">Button</button>
         </div>
 
+        <div id="events-info"></div>
         <div id="events"></div>
 
         <div id="info-outer-wrapper">
