Added head data

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Rowan Mulder">
+    <meta name="description" content="Javascript Event Visualizer">
+    <title>Javascript Event Visualizer</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script defer src="main.js"></script>
 </head>
