--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Rowan Mulder">
-    <meta name="description" content="Javascript Event Visualizer">
+    <meta name="description" content="An interactive way to learn and discover javascript events">
+    <meta property="og:title" content="Javascript Event Visualizer">
+    <meta property="og:description" content="An interactive way to learn and discover javascript events">
+    <meta property="og:image" content="https://rowan-mulder.github.io/javascript-event-visualizer/images/opengraph/opengraph.png">
     <title>Javascript Event Visualizer</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script defer src="main.js"></script>
