--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="https://rowan-mulder.github.io/javascript-event-visualizer/images/opengraph/opengraph.png">
     <title>Javascript Event Visualizer</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script defer src="main.js"></script>
 </head>
 
