Added toggle to logs related to pen devices

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                                 <label for="check-verbose-logging">Verbose logging</label>
                             </td>
                         </tr>
+                        <tr title="Logs event properties related to pen devices">
+                            <td>
+                                <input id="check-pendevice-logging" type="checkbox" checked>
+                            </td>
+                            <td>
+                                <label for="check-pendevice-logging">Pen devices</label>
+                            </td>
+                        </tr>
                         <tr class="log-settings-divider">
                             <td colspan="2"></td>
                         </tr>
