Properly centered events, because mobile couldn't scroll all the way up.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <div class="popup-info" id="events-info"></div>
             <div class="popup-info" id="events-property-info"></div>
 
-            <div id="events"></div>
+            <div id="events-outer-wrapper">
+                <div id="events-inner-wrapper"></div>
+            </div>
         </div>
 
         <div id="info-outer-wrapper">
