--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
                                 <label for="check-verbose-logging">Verbose logging</label>
                             </td>
                         </tr>
-                        <tr title="Logs event properties related to pen devices">
+                        <tr title="Logs event properties specifically related to mouse devices">
+                            <td>
+                                <input id="check-mousedevice-logging" type="checkbox" checked>
+                            </td>
+                            <td>
+                                <label for="check-mousedevice-logging">Mouse devices</label>
+                            </td>
+                        </tr>
+                        <tr title="Logs event properties specifically related to pen devices">
                             <td>
                                 <input id="check-pendevice-logging" type="checkbox" checked>
                             </td>
