Added a display for navigator data, which may be useful when testing devices

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <body>
     <div id="wrapper">
         <div id="btn-wrapper">
+            <button onclick="toggleVisibility('system-info-wrapper')" id="btn-system-info">System info</button>
+            <div id="system-info-wrapper" class="hidden">
+                <div id="system-info"></div>
+            </div>
+
             <button id="btn">Button</button>
         </div>
 
